package Client;

public class ClientSecretary {




    public void handleMessageFromServer(Object payload) {

    }
}
