package Server;

public class ServerSecretary {
}
