package Util;

public enum UserType
{
	PATIENT,
	STAFF,
	DOCTOR
}
