@startuml

title __ESOF-3050 DESIGN PROJECT's Class Diagram__\n

  namespace Clinic.Client {
    class Clinic.Client.Client {
    }
  }
  

  namespace Clinic.Client {
    class Clinic.Client.ClientSecretary {
    }
  }
  

  namespace Clinic.Client {
    class Clinic.Client.ClientTask {
    }
  }
  

  namespace Clinic.Client {
    namespace Connection {
      abstract class Clinic.Client.Connection.AbstractClient {
      }
    }
  }
  

  namespace Clinic.Client {
    namespace Connection {
      class Clinic.Client.Connection.AdaptableClient {
      }
    }
  }
  

  namespace Clinic.Client {
    namespace Connection {
      class Clinic.Client.Connection.MyClient {
      }
    }
  }
  

  namespace Clinic.Client {
    namespace Connection {
      class Clinic.Client.Connection.ObservableClient {
      }
    }
  }
  

  namespace Clinic.Client {
    namespace Connection {
      class Clinic.Client.Connection.ObservableSWRClient {
      }
    }
  }
  

  namespace Clinic.Client {
    namespace GUI {
      class Clinic.Client.GUI.DoctorSearch {
      }
    }
  }
  

  namespace Clinic.Client {
    namespace GUI {
      class Clinic.Client.GUI.LoginPanel {
      }
    }
  }
  

  namespace Clinic.Client {
    namespace GUI {
      class Clinic.Client.GUI.MyGUI {
      }
    }
  }
  

  namespace Clinic.Client {
    namespace GUI {
      class Clinic.Client.GUI.ResultsEntry {
      }
    }
  }
  

  namespace Clinic.Client {
    namespace GUI {
      class Clinic.Client.GUI.ResultsPanel {
      }
    }
  }
  

  namespace Clinic.Core {
    class Clinic.Core.Appointment {
    }
  }
  

  namespace Clinic.Core {
    class Clinic.Core.Diagnosis {
    }
  }
  

  namespace Clinic.Core {
    class Clinic.Core.Doctor {
    }
  }
  

  namespace Clinic.Core {
    class Clinic.Core.Patient {
    }
  }
  

  namespace Clinic.Core {
    class Clinic.Core.Payload {
    }
  }
  

  namespace Clinic.Core {
    class Clinic.Core.Prescription {
    }
  }
  

  namespace Clinic.Core {
    class Clinic.Core.Schedule {
    }
  }
  

  namespace Clinic.Core {
    class Clinic.Core.Staff {
    }
  }
  

  namespace Clinic.Core {
    class Clinic.Core.Token {
    }
  }
  

  namespace Clinic.Core {
    class Clinic.Core.User {
    }
  }
  

  namespace Clinic.Server {
    namespace Connection {
      abstract class Clinic.Server.Connection.AbstractConnectionFactory {
      }
    }
  }
  

  namespace Clinic.Server {
    namespace Connection {
      abstract class Clinic.Server.Connection.AbstractServer {
      }
    }
  }
  

  namespace Clinic.Server {
    namespace Connection {
      class Clinic.Server.Connection.AdaptableServer {
      }
    }
  }
  

  namespace Clinic.Server {
    namespace Connection {
      class Clinic.Server.Connection.ConnectionToClient {
      }
    }
  }
  

  namespace Clinic.Server {
    namespace Connection {
      class Clinic.Server.Connection.MyServer {
      }
    }
  }
  

  namespace Clinic.Server {
    namespace Connection {
      class Clinic.Server.Connection.ObservableOriginatorServer {
      }
    }
  }
  

  namespace Clinic.Server {
    namespace Connection {
      class Clinic.Server.Connection.ObservableServer {
      }
    }
  }
  

  namespace Clinic.Server {
    namespace Connection {
      class Clinic.Server.Connection.OriginatorMessage {
      }
    }
  }
  

  namespace Clinic.Server {
    class Clinic.Server.Server {
    }
  }
  

  namespace Clinic.Server {
    class Clinic.Server.ServerDirector {
    }
  }
  

  namespace Clinic.Server {
    class Clinic.Server.ServerSecretary {
    }
  }
  

  namespace Util {
    namespace Exceptions {
      class Util.Exceptions.IncorrectPayloadException {
      }
    }
  }
  

  namespace Util {
    class Util.RequestType {
    }
  }
  

  namespace Util {
    enum UserType {
    }
  }
  

  Clinic.Client.ClientSecretary o-- Clinic.Client.Connection.MyClient : myClient
  Clinic.Client.ClientSecretary o-- Clinic.Client.GUI.MyGUI : myGUI
  Clinic.Client.ClientTask o-- Clinic.Core.Payload : payload
  Clinic.Client.Connection.AbstractClient .up.|> java.lang.Runnable
  Clinic.Client.Connection.AdaptableClient -up-|> Clinic.Client.Connection.AbstractClient
  Clinic.Client.Connection.AdaptableClient o-- Clinic.Client.Connection.ObservableClient : client
  Clinic.Client.Connection.MyClient -up-|> Clinic.Client.Connection.AbstractClient
  Clinic.Client.Connection.MyClient o-- Clinic.Client.ClientSecretary : secretary
  Clinic.Client.Connection.ObservableClient -up-|> java.util.Observable
  Clinic.Client.Connection.ObservableClient o-- Clinic.Client.Connection.AdaptableClient : service
  Clinic.Client.Connection.ObservableSWRClient -up-|> Clinic.Client.Connection.ObservableClient
  Clinic.Client.GUI.DoctorSearch -up-|> javax.swing.JPanel
  Clinic.Client.GUI.DoctorSearch o-- Clinic.Client.ClientSecretary : client
  Clinic.Client.GUI.DoctorSearch o-- Clinic.Core.Token : token
  Clinic.Client.GUI.LoginPanel -up-|> javax.swing.JPanel
  Clinic.Client.GUI.LoginPanel o-- Clinic.Client.ClientSecretary : client
  Clinic.Client.GUI.LoginPanel o-- Clinic.Core.Token : token
  Clinic.Client.GUI.ResultsEntry -up-|> javax.swing.JPanel
  Clinic.Client.GUI.ResultsPanel -up-|> javax.swing.JPanel
  Clinic.Core.Appointment o-- Clinic.Core.Diagnosis : diagnosis
  Clinic.Core.Appointment o-- Clinic.Core.Doctor : doctor
  Clinic.Core.Appointment o-- Clinic.Core.Patient : patient
  Clinic.Core.Appointment o-- Clinic.Core.Prescription : prescription
  Clinic.Core.Diagnosis o-- Clinic.Core.Doctor : doctor
  Clinic.Core.Doctor .up.|> java.io.Serializable
  Clinic.Core.Doctor -up-|> Clinic.Core.User
  Clinic.Core.Doctor o-- Clinic.Core.Schedule : schedule
  Clinic.Core.Patient -up-|> Clinic.Core.User
  Clinic.Core.Patient o-- Clinic.Core.Schedule : schedule
  Clinic.Core.Payload .up.|> java.io.Serializable
  Clinic.Core.Payload o-- Clinic.Core.Token : token
  Clinic.Core.Staff -up-|> Clinic.Core.User
  Clinic.Core.Token .up.|> java.io.Serializable
  Clinic.Core.Token o-- Util.UserType : type
  Clinic.Core.User .up.|> java.io.Serializable
  Clinic.Core.User o-- Clinic.Core.Token : loginToken
  Clinic.Server.Connection.AbstractServer .up.|> java.lang.Runnable
  Clinic.Server.Connection.AbstractServer o-- Clinic.Server.Connection.AbstractConnectionFactory : connectionFactory
  Clinic.Server.Connection.AdaptableServer -up-|> Clinic.Server.Connection.AbstractServer
  Clinic.Server.Connection.AdaptableServer o-- Clinic.Server.Connection.ObservableServer : server
  Clinic.Server.Connection.ConnectionToClient o-- Clinic.Server.Connection.AbstractServer : server
  Clinic.Server.Connection.MyServer -up-|> Clinic.Server.Connection.AbstractServer
  Clinic.Server.Connection.MyServer o-- Clinic.Server.ServerSecretary : serverSecretary
  Clinic.Server.Connection.ObservableOriginatorServer -up-|> Clinic.Server.Connection.ObservableServer
  Clinic.Server.Connection.ObservableServer -up-|> java.util.Observable
  Clinic.Server.Connection.ObservableServer o-- Clinic.Server.Connection.AdaptableServer : service
  Clinic.Server.Connection.OriginatorMessage o-- Clinic.Server.Connection.ConnectionToClient : originator
  Clinic.Server.ServerSecretary o-- Clinic.Server.ServerDirector : director
  Clinic.Server.ServerSecretary o-- Clinic.Server.Connection.MyServer : myServer


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
